FRENCH/listings/ch17-oop/listing-17-10/output.txt
$ cargo run
   Compiling gui v0.1.0 (file:///projects/gui)
error[E0277]: the trait bound `String: Affichable` is not satisfied
 --> src/main.rs:5:26
  |
5 |         composants: vec![Box::new(String::from("Salutations"))],
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Affichable` is not implemented for `String`
  |
  = note: required for the cast to the object type `dyn Affichable`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `gui` due to previous error
